feat: Add new API routes for content and news management, including CRUD operations
- Implemented GET, PUT, and DELETE methods for content and news posts.
- Added new components for displaying profiles and a card grid layout.
- Introduced a rich text editor for content management.
- Created a login modal with user authentication.
- Added styles for modal and components.
- Included SVG icons for UI elements.
- Defined TypeScript types for content and news post data.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^9.5.0",
     "@lexical/react": "^0.30.0",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.7.0",
     "bcrypt": "^5.1.1",
     "jose": "^6.0.10",
     "lexical": "^0.30.0",
