--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lexical/react": "^0.30.0",
     "@prisma/client": "^6.7.0",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
     "jose": "^6.0.10",
     "lexical": "^0.30.0",
     "next": "15.3.1",
