--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "jose": "^6.0.10",
     "lexical": "^0.30.0",
+    "lucide-react": "^0.510.0",
     "next": "15.3.1",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
